area + provinces loc

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -241,3 +241,45 @@
  nordstrasse_area:0 "Nordstrasse"
  heniholm_area:0 "Heniholm"
  rudohland_area:0 "Rudohland"
+
+ xastram_area:0 "Xastram"
+ disayat_area:0 "Disayat"
+ vanqavian_coast_area:0 "Vanqavia"
+ durapay_area:0 "Durapay"
+ varaz_area:0 "Varaz"
+ fravasum_area:0 "Fravasum"
+ metzar_area:0 "Metzar"
+ frasatah_area:0 "Frasatah"
+ raxasamah_area:0 "Raxasamah"
+ astarami_pass_area:0 "Astarami Pass"
+ upadah_area:0 "Upadah"
+ auruvata_area:0 "Auruvata"
+ banquz_area:0 "Banquz"
+ qarasami_peninsula_area:0 "Qarasami Peninsula"
+ frankras_area:0 "Frankras"
+ north_tarascan_area:0 "Northern Tarascan"
+ saenaya_area:0 "Saenaya"
+ kadah_area:0 "Kadah"
+
+ qawart_area:0 "Qawart"
+ sunbahat_area:0 "Sunbahat"
+ aroshas_peninsula_area:0 "Aroshasi Peninsula"
+ parum_area:0 "Parum"
+
+ hussestan_area:0 "Hussestan"
+ traaw_area:0 "Traaw"
+ upper_fadi_area:0 "Upper Fadi"
+ ehtywiran_highlands_area:0 "Ehtywiran Highlands"
+ barzum_area:0 "Barzum"
+ lower_fadi_area:0 "Lower Fadi"
+ wamdi_area:0 "Wamdi"
+ nuqat_area:0 "Nuqat"
+ snatar_area:0 "Snatar"
+ upper_rasus_area:0 "Upper Rasus"
+ middle_rasus_area:0 "Middle Rasus"
+ lower_rasus_area:0 "Lower Rasus"
+ hytia_area:0 "Hytia"
+
+ danya_area:0 "Danya"
+
+ 
