--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -310,7 +310,7 @@
  PROV309:0 "Põresa"
  PROV310:0 "koonduv"
  PROV311:0 "Segenad"
- PROV312:0 "New Argenian Coast"
+ PROV312:0 "Tivtan Bay"
  PROV313:0 "313"
  PROV314:0 "314"
  PROV315:0 "Sadamainult"
@@ -364,8 +364,8 @@
  PROV363:0 "Mathan"
  PROV364:0 "Rihapestid"
  PROV365:0 "Nunwals"
- PROV366:0 "Coast of Eamenos"
- PROV367:0 "Coast of Delieania"
+ PROV366:0 "Zakarturi Coast"
+ PROV367:0 "Coast of Eamenos"
  PROV368:0 "Inarid"
  PROV369:0 "Lending"
  PROV370:0 "Enorland"
@@ -453,7 +453,7 @@
  PROV452:0 "Aurville"
  PROV453:0 "Nancea"
  PROV454:0 "Cuei"
- PROV455:0 "455"
+ PROV455:0 "Hussen Bay"
  PROV456:0 "Framont"
  PROV457:0 "Secnios"
  PROV458:0 "Lounimos"
@@ -485,7 +485,7 @@
  PROV484:0 "484"
  PROV485:0 "485"
  PROV486:0 "486"
- PROV487:0 "487"
+ PROV487:0 "Coast of Cleidemni"
  PROV488:0 "488"
  PROV489:0 "Nekody"
  PROV490:0 "Martefaz"
@@ -577,7 +577,7 @@
  PROV576:0 "Rolasta"
  PROV577:0 "Jižní pevnost"
  PROV578:0 "Velký les"
- PROV579:0 "Sea579"
+ PROV579:0 "Northern Panourgian Sea"
  PROV580:0 "Arodend"
  PROV581:0 "Eneradech"
  PROV582:0 "Wessburg"
@@ -586,7 +586,7 @@
  PROV585:0 "Raruth"
  PROV586:0 "Wolledorf"
  PROV587:0 "Oddelean Range"
- PROV588:0 "Sea588"
+ PROV588:0 "Southern Panourgian Sea"
  PROV589:0 "Oddelende"
  PROV590:0 "Oddelpass"
  PROV591:0 "Oddelean Range"
@@ -596,8 +596,8 @@
  PROV595:0 "Hescerport"
  PROV596:0 "Entaustadt"
  PROV597:0 "Dovenrei"
- PROV598:0 "Sea598"
- PROV599:0 "Sea599"
+ PROV598:0 "Perqasmian Sea"
+ PROV599:0 "Adeizan Sea"
  PROV600:0 "Vetican Bay"
  PROV601:0 "Sterist"
  PROV602:0 "Auchender"
@@ -882,11 +882,11 @@
  PROV881:0 "Laverie"
  PROV882:0 "Eklidian Sea"
  PROV883:0 "Ceridolie"
- PROV884:0 "884"
+ PROV884:0 "Western Musatemaran Sea"
  PROV885:0 "Ronicine"
  PROV886:0 "Fionella"
  PROV887:0 "Palisollia"
- PROV888:0 "888"
+ PROV888:0 "Waccian Sea"
  PROV889:0 "Castevola"
  PROV890:0 "Univerosa"
  PROV891:0 "891"
@@ -900,7 +900,7 @@
  PROV899:0 "Magilerie"
  PROV900:0 "Gotichio"
  PROV901:0 "Areteci"
- PROV902:0 "902"
+ PROV902:0 "Banquzi Bay"
  PROV903:0 "Bociossa"
  PROV904:0 "Calati"
  PROV905:0 "Saferinne"
@@ -908,7 +908,7 @@
  PROV907:0 "Somirola"
  PROV908:0 "Ozivinna"
  PROV909:0 "Meitiesa"
- PROV910:0 "910"
+ PROV910:0 "Eastern Kahbi Sea"
  PROV911:0 "Musatemaran Sea"
  PROV912:0 "912"
  PROV913:0 "Castima"
@@ -962,7 +962,7 @@
  PROV961:0 "Demauax"
  PROV962:0 "962"
  PROV963:0 "Melien"
- PROV964:0 "963"
+ PROV964:0 "Sahlabadi Coast"
  PROV965:0 "Creval"
  PROV966:0 "Montax"
  PROV967:0 "Etnuenne"
@@ -978,7 +978,7 @@
  PROV977:0 "Balsahra Oasis"
  PROV978:0 "Qadi'madina" #city old
  PROV979:0 "Sabir" #saber
- PROV980:0 "980"
+ PROV980:0 "Horian Depths"
  PROV981:0 "Arak" #cavern
  PROV982:0 "982"
  PROV983:0 "983"
@@ -1055,7 +1055,7 @@
  PROV1054:0 "Ain'ajuaf" #oasis shallow  
  PROV1055:0 "Ramaal zmumila" #sands boring 
  PROV1056:0 "Qadarim" 
- PROV1057:0 "1057" 
+ PROV1057:0 "Anjafrah" 
  PROV1058:0 "1058"
  PROV1059:0 "Sayaanud Oasis"
  PROV1060:0 "1060"
@@ -1086,7 +1086,7 @@
  PROV1085:0 "1085"
  PROV1086:0 "1086"
  PROV1087:0 "1087"
- PROV1088:0 "1088"
+ PROV1088:0 "Qastami Strait"
  PROV1089:0 "1089"
  PROV1090:0 "Qalat" #fortress
  PROV1091:0 "1091"
@@ -1225,11 +1225,11 @@
  PROV1224:0 "1224"
  PROV1225:0 "1225"
  PROV1226:0 "1226"
- PROV1227:0 "1227"
+ PROV1227:0 "Qawartian Coast"
  PROV1228:0 "1228"
  PROV1229:0 "1229"
  PROV1230:0 "1230"
- PROV1231:0 "1231"
+ PROV1231:0 "Sunbati Coast"
  PROV1232:0 "1232"
  PROV1233:0 "1233"
  PROV1234:0 "1234"
@@ -1294,7 +1294,7 @@
  PROV1293:0 "1293"
  PROV1294:0 "1294"
  PROV1295:0 "1295"
- PROV1296:0 "1296"
+ PROV1296:0 "Deliepolis"
  PROV1297:0 "1297"
  PROV1298:0 "1298"
  PROV1299:0 "1299"
@@ -1953,7 +1953,7 @@
  PROV1952:0 "1952"
  PROV1953:0 "1953"
  PROV1954:0 "1954"
- PROV1955:0 "1955"
+ PROV1955:0 "Parahaw"
  PROV1956:0 "1956"
  PROV1957:0 "Aparati"
  PROV1958:0 "Taradhat"
@@ -2029,7 +2029,7 @@
  PROV2028:0 "2028"
  PROV2029:0 "2029"
  PROV2030:0 "2030"
- PROV2031:0 "2031"
+ PROV2031:0 "Sumawat"
  PROV2032:0 "2032"
  PROV2033:0 "2033"
  PROV2034:0 "2034"
