--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -8,4 +8,5 @@
  merc_elchdorf_band:0 "Elchdorf Band"
  merc_blue_guard:0 "Blue Guard"
  merc_freilaufer:0 "Freiläuferen"
+ merc_eisenburg_company:0 "Eisenburg Company"
  merc_virgilian_guard:0 "§JVirgilian Guard§!"
