--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -16,3 +16,6 @@
  bogiland_appointed_bureaucrats_desc:0 "As the feudal system is slowly disappearing, a new system is rising - bureaucracy. The land is governed by crown-appointed administrators who will not want to overthrow the king every few years. By granting these positions based on loyalty instead of bloodright it might even help the growing corruption."
  bogiland_national_unison:0 "National Unison"
  bogiland_national_unison_desc:0 "Bogilish Nation now stands proudly in the world scene, knowing that it is not some push-over but a real player in the game. Cultural and religious unity brings us a great deal of stability to the nation."
+
+ centralize_the_state_title:0 "Centralise the State"
+ centralize_the_state_desc:0 "Self-will of our vassals has been a menace to our king for far too long. It's time to show our nobles who is really in charge in this [Root.GovernmentName]."
