--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -89,3 +89,9 @@
  
  randwerpen_kingdom_reform:0 "Randwerpen Kingdom"
  randwerpen_kingdom_reform_desc:0 "We are providing our people freedom by having a parliament and guaranteed rights which in return makes people more willing to fight for our freedom. They build different fortifications and structures that in case of foreign invasion would help us to push invaders back and make it as hurtful as it is possible for them. These structures could even outlive our state making foreign occupation very difficult."
+
+ bogilish_monarchy_reform:0 "Bogilish Monarchy"
+ bogilish_monarchy_reform_desc:0 "Coming from long lasting cultural tradition, in this government relations between senior and vassal far better at the cost of increased autonomy of subjects."
+
+ new_bogilish_monarchy_reform:0 "New Bogilish Monarchy"
+ new_bogilish_monarchy_reform_desc:0 "With centralisation of royal domain, vassals have been degraded into king's advisors."
