--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -5,6 +5,9 @@
  glaser_band:0 "Glaser Band"
  elite_geniburgh_forces:0 "§JElite Geniburgher Forces§!"
 
+ merc_bidnicy:0 "Bídnicy"
+ merc_vagabondians:0 "Vagabondians"
+ merc_wenzels_men:0 "Wenzel's Men"
  merc_elchdorf_band:0 "Elchdorf Band"
  merc_blue_guard:0 "Blue Guard"
  merc_freilaufer:0 "Freiläuferen"
