--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -549,7 +549,7 @@
  PROV_ADJ548:0 "Keltmark Coast"
  PROV_ADJ549:0 "Kleindorf"
  PROV_ADJ550:0 "Elchdorf"
- PROV_ADJ551:0 "Murom"
+ PROV_ADJ551:0 "Muros"
  PROV_ADJ552:0 "Modlatz"
  PROV_ADJ553:0 "Seltfurt"
  PROV_ADJ554:0 "Altaugen"
