--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -549,7 +549,7 @@
  PROV548:0 "Keltmark Coast"
  PROV549:0 "Kleindorf"
  PROV550:0 "Elchdorf"
- PROV551:0 "Murom"
+ PROV551:0 "Muros"
  PROV552:0 "Modlatz"
  PROV553:0 "Seltfurt"
  PROV554:0 "Altaugen"
