--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -2387,6 +2387,7 @@
  IS_NOT_OVERLORD_OF:0 "Is NOT the overlord of "
  IS_OVERLORD_OF:0 "Is the overlord of "
  TRIGGER_COUNTRY:0 "Country"
+ WASTELAND:0 "Wasteland"
  WASTELAND_DESC:0 "Cannot be traversed or colonized"
  arctic:0 "Arctic"
  IS_VASSAL_SPHERE:0 "§Y$COUNTRY$§W Vassal"
