karma + prov names for pamkusea

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -282,4 +282,14 @@
 
  danya_area:0 "Danya"
 
- 
+ deoponia_area:0 "Deoponia"
+ northern_deoponia_area:0 "Northern Deoponia"
+ eamenos_area:0 "Eamenos"
+ hyconia_area:0 "Hyconia"
+ delieania_area:0 "Delieania"
+ cleidemni_area:0 "Cleidemni"
+ aknaoi_area:0 "Aknaoi"
+ shusali_area:0 "Shusali"
+ panourgian_archipelago_area:0 "Panourgian Archipelago"
+ melesia_area:0 "Melesia"
+ agkasia_area:0 "Agkasia"
