--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1021,7 +1021,7 @@
  PROV1020:0 "1020"
  PROV1021:0 "1021"
  PROV1022:0 "1022"
- PROV1023:0 "1023"
+ PROV1023:0 "Amnodos"
  PROV1024:0 "Fawud"
  PROV1025:0 "1025"
  PROV1026:0 "1026"
@@ -1223,34 +1223,34 @@
  PROV1222:0 "1222"
  PROV1223:0 "1223"
  PROV1224:0 "1224"
- PROV1225:0 "1225"
+ PROV1225:0 "Pholakis"
  PROV1226:0 "1226"
  PROV1227:0 "Qawartian Coast"
- PROV1228:0 "1228"
- PROV1229:0 "1229"
- PROV1230:0 "1230"
+ PROV1228:0 "Sephogos"
+ PROV1229:0 "Mesymenea"
+ PROV1230:0 "Nefapont"
  PROV1231:0 "Sunbati Coast"
- PROV1232:0 "1232"
+ PROV1232:0 "Hyncae"
  PROV1233:0 "1233"
  PROV1234:0 "1234"
- PROV1235:0 "1235"
- PROV1236:0 "1236"
- PROV1237:0 "1237"
- PROV1238:0 "1238"
- PROV1239:0 "1239"
- PROV1240:0 "1240"
+ PROV1235:0 "Prugos"
+ PROV1236:0 "Syrassea"
+ PROV1237:0 "Miphos"
+ PROV1238:0 "Abunae"
+ PROV1239:0 "Hyrcedos"
+ PROV1240:0 "Pellos"
  PROV1241:0 "1241"
  PROV1242:0 "1242"
  PROV1243:0 "1243"
- PROV1244:0 "1244"
- PROV1245:0 "1245"
- PROV1246:0 "1246"
+ PROV1244:0 "Synoa"
+ PROV1245:0 "Hapheus"
+ PROV1246:0 "Therfoconia"
  PROV1247:0 "1247"
- PROV1248:0 "1248"
- PROV1249:0 "1249"
- PROV1250:0 "1250"
- PROV1251:0 "1251"
- PROV1252:0 "1252"
+ PROV1248:0 "Elophidea"
+ PROV1249:0 "Southern Hermann's Bay"
+ PROV1250:0 "Anavols"
+ PROV1251:0 "Thramptus"
+ PROV1252:0 "Kedipol"
  PROV1253:0 "1253"
  PROV1254:0 "1254"
  PROV1255:0 "1255"
@@ -1264,7 +1264,7 @@
  PROV1263:0 "1263"
  PROV1264:0 "1264"
  PROV1265:0 "1265"
- PROV1266:0 "1266"
+ PROV1266:0 "Palofos"
  PROV1267:0 "1267"
  PROV1268:0 "1268"
  PROV1269:0 "1269"
