--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -118,14 +118,11 @@
  mesutian_group:0 "Mesutian"
  ribyah:0 "Ribyah"
 
- kakigian_visparayan_group:0 "Kakigian Visparayan"
- memlashali:0 "Memlashali"
- haptoiring:0 "Haptoiring"
-
  pamkusean_group:0 "Pamkusean"
  ilikiomenoi:0 "Ilikiomenoi"
  kainimoei:0 "Kainimoei"
  nosecinei:0 "Nosecinei"
+ apaxtoroi:0 "Apaxtoroi"
 
  visparayan_group:0 "Visparayan"
  fravasumi:0 "Fravasumi"
@@ -134,6 +131,8 @@
  baraqazhi:0 "Baraqazhi"
  aroshas:0 "Aroshas"
  saenayan:0 "Saenayan"
+ dashavi:0 "Dashavi"
+ haptoiring:0 "Haptoiring"
 
  zakarturi_group:0 "Zakarturi"
  mesiheisi:0 "Mesiheisi"
