--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -677,3 +677,14 @@
  GOR_ADJ:0 "Gormadi"
  GAR:0 "Garituk"
  GAR_ADJ:0 "Garituki"
+
+ APA:0 "Apaxtaros"
+ APA_ADJ:0 "Apaxtarian"
+ PEO:0 "Pellos"
+ PEO_ADJ:0 "Pellosian"
+ DEO:0 "Deoponia"
+ DEO_ADJ:0 "Deoponian"
+ AMN:0 "Amnodos"
+ AMN_ADJ:0 "Amnodosian"
+ AGK:0 "Agkasia"
+ AGK_ADJ:0 "Agkasian"
