--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1016,7 +1016,7 @@
  PROV1015:0 "1015"
  PROV1016:0 "1016"
  PROV1017:0 "Fawud"
- PROV1018:0 "1018"
+ PROV1018:0 "Erithynai"
  PROV1019:0 "1019"
  PROV1020:0 "1020"
  PROV1021:0 "1021"
@@ -1224,7 +1224,7 @@
  PROV1223:0 "1223"
  PROV1224:0 "1224"
  PROV1225:0 "Pholakis"
- PROV1226:0 "1226"
+ PROV1226:0 "Maragos"
  PROV1227:0 "Qawartian Coast"
  PROV1228:0 "Sephogos"
  PROV1229:0 "Mesymenea"
@@ -1241,7 +1241,7 @@
  PROV1240:0 "Pellos"
  PROV1241:0 "1241"
  PROV1242:0 "1242"
- PROV1243:0 "1243"
+ PROV1243:0 "Cleideos"
  PROV1244:0 "Synoa"
  PROV1245:0 "Hapheus"
  PROV1246:0 "Therfoconia"
@@ -1276,27 +1276,27 @@
  PROV1275:0 "1275"
  PROV1276:0 "1276"
  PROV1277:0 "1277"
- PROV1278:0 "1278"
- PROV1279:0 "1279"
- PROV1280:0 "1280"
- PROV1281:0 "1281"
- PROV1282:0 "1282"
- PROV1283:0 "1283"
- PROV1284:0 "1284"
- PROV1285:0 "1285"
- PROV1286:0 "1286"
- PROV1287:0 "1287"
- PROV1288:0 "1288"
- PROV1289:0 "1289"
- PROV1290:0 "1290"
- PROV1291:0 "1291"
- PROV1292:0 "1292"
- PROV1293:0 "1293"
- PROV1294:0 "1294"
- PROV1295:0 "1295"
+ PROV1278:0 "Virinos"
+ PROV1279:0 "Kurta"
+ PROV1280:0 "Kanoripol"
+ PROV1281:0 "Metarapol"
+ PROV1282:0 "Tassamos"
+ PROV1283:0 "Parnos"
+ PROV1284:0 "Thedim"
+ PROV1285:0 "Kvaitis"
+ PROV1286:0 "Orosedea"
+ PROV1287:0 "Karastekhi"
+ PROV1288:0 "Mestaneri"
+ PROV1289:0 "Tagivarak"
+ PROV1290:0 "Kagitepos"
+ PROV1291:0 "Lymepolis"
+ PROV1292:0 "Nikat"
+ PROV1293:0 "Makytos"
+ PROV1294:0 "Paranik"
+ PROV1295:0 "Sakrauli"
  PROV1296:0 "Deliepolis"
- PROV1297:0 "1297"
- PROV1298:0 "1298"
+ PROV1297:0 "Vashira"
+ PROV1298:0 "Matserval"
  PROV1299:0 "1299"
  PROV1300:0 "1300"
  PROV1301:0 "1301"
@@ -1967,10 +1967,10 @@
  PROV1966:0 "Pasãv"
  PROV1967:0 "Azâtan"
  PROV1968:0 "Surad"
- PROV1969:0 "1969"
- PROV1970:0 "1970"
- PROV1971:0 "1971"
- PROV1972:0 "1972"
+ PROV1969:0 "Tamarat"
+ PROV1970:0 "Astaxum"
+ PROV1971:0 "1971" #todo
+ PROV1972:0 "Dusha"
  PROV1973:0 "Spitam"
  PROV1974:0 "Astaram"
  PROV1975:0 "Karameht"
