--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -77,3 +77,7 @@
 
  hestan_nation_title:0 "Unite Hestan @HES"
  
+ apaxtaros_nation_title:0 "Embrace Pamkusean Identity @APA"
+ apaxtaros_nation_desc:0 "Our rulers took a liking in the pamkusean culture. Their fashion, art, music and customs mixed with our visparayan traditions. Fully adopting local culture will solidify our rule over the Deponian Peninsula for ages to come."
+ apaxtaros_nation_tt:0 "Every pamkusean province of Rah Jadid faith will change its culture to Apaxtoroi"
+ apaxtaros_nation_ttt:0 "Has succesfully negotiated with Oligarchs of Achnith"
