--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_englosh:
+﻿l_english:
  chinaware:0 "Pemenisile"
  chinawareDESC:0 "Pemenisile represents various exotic goods such as chinaware and carpets. Generally from the Orient, these high value luxuries command a high price on the market."
  cloth:0 "Cloth"
