uzkolia idea loc

--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -29,3 +29,22 @@
  MARSTONIA_new_ways:0 "New Ways"
  MARSTONIA_new_ways_desc:0 "Spread of new faiths in marstonia is undeniable. Poeple and entire countries embrace new ways and sometimes reject legacy of their ancestors. Without dialogue with these people, our tradition is at risk of vanishing amidst more universal faiths. It is necessary to strengthen the bonds between our people despite religious differences."
  
+ 
+
+ uzkolia_ideas:0 "Uzkolian Ideas"
+ uzkolia_ideas_start:0 "Uzkolian Traditions"
+ uzkolia_ideas_bonus:0 "Uzkolian Ambition"
+ uzkolia_new_homeland:0 "New Homeland"
+ uzkolia_new_homeland_desc:0 "Uzkolia was established following the last wave of pohjoista migrations. Being divided by the uzkolian strait from tummic nations we cordial relations with other tribes and states in Marstonia to survive. We slowly integrated with them, but despite this we still maintain our own cultural identity."
+ uzkolia_furmaric_trade:0 "Furmaric Trade"
+ uzkolia_furmaric_trade_desc:0 "Uzkolia can owes its economical hegemony thanks to advantageous position between 2 important seas - Onzee and Furmaric Sea. We control the flow of trade from the Zakarturi and Kakigian lands to ehreni and argenian markets in the west. By monopolising this connection we can charge high fees for simply traveling through the strait."
+ uzkolia_western_influence:0 "Western Influence"
+ uzkolia_western_influence_desc:0 "Trading with Saelian civilisation brought many new ideas to these lands. Our merchants were fascinated by western customs and traditions, which caused spread of sigilianism in many important hubs and towns. This connection was solidified when it was proclaimed as a state religion, making Uzkolia equal among other western nations."
+ uzkolia_skaarid_tactics:0 "Skäärid Tactics"
+ uzkolia_skaarid_tactics_desc:0 "Shattered coast of Uzkolia makes for a perfect trap against enemy ships.Sharp rocks and shallow sea floor are deadly even for seasoned sailors. Our knowledge of these shores and experience in sailing around them gives us a great advantage against any potential invader. Most notable case might be the decimation of Ehreni fleet during the 1st Uzkolian War."
+ uzkolia_seasoned_seamen:0 "Seasoned Seamen"
+ uzkolia_seasoned_seamen_desc:0 "The majority of uzkolian population lives along the coast, making the profession of a fisherman one of the most popular. Many spend their lives on the sea, sometimes calling ships their primary home. This makes even not-so-skilled uzkolians better sailors than best sailors abroad."
+ uzkolia_noukogu:0 "Nõukogu"
+ uzkolia_noukogu_desc:0 "Nõukogu refers to the council of merchants who compose the uzkolian government. Each representative is selected from different city, town or a village. This is to ensure each settlements can voice their opinion on matters regarding the entire nation."
+ uzkolia_oriental_guns:0 "Oriental Guns"
+ uzkolia_oriental_guns_desc:0 "Being a middleman between the two words, the innovation travels fast. After successes of kakigian empire thanks to using siege artillery, many of our engineers and shipwrights became interested in using this technology to grant Uzkolia extra advantage over our enemies. First cannons were imported from the east, but nowadays they are made locally or purchased from nearby states."
