kakigian colonization rework

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -95,3 +95,7 @@
 
  new_bogilish_monarchy_reform:0 "New Bogilish Monarchy"
  new_bogilish_monarchy_reform_desc:0 "With centralisation of royal domain, vassals have been degraded into king's advisors."
+
+ kakigian_frontier_reform:0 "Kakigian Frontier"
+ kakigian_frontier_reform_desc:0 "Fertile soils and mountains rich with resources in Kakigia remain unexploited. The wast steppe awaits anyone willing to tame the brutal hordes."
+ kakigian_frontier_reform_tt:0 "Have had §YSelf-sustainable Colonies§! age ability."
