--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1176,7 +1176,7 @@
  PROV1175:0 "1175"
  PROV1176:0 "1176"
  PROV1177:0 "1177"
- PROV1178:0 "1178"
+ PROV1178:0 "Sikhraval"
  PROV1179:0 "1179"
  PROV1180:0 "1180"
  PROV1181:0 "1181"
@@ -1707,7 +1707,7 @@
  PROV1706:0 "1706"
  PROV1707:0 "1707"
  PROV1708:0 "1708"
- PROV1709:0 "1709"
+ PROV1709:0 "Davirat"
  PROV1710:0 "1710"
  PROV1711:0 "1711"
  PROV1712:0 "1712"
