mepis_tadzar great project + zakarturi empire formation changes

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  province_is_or_accepts_yaltazim_tt:0 "The Religion of §Y[Root.GetName]§! is §YYaltazim§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_saelian_tt:0 "The Religion of §Y[Root.GetName]§! is §YSaelian§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_anhativaz_tt:0 "The Religion of §Y[Root.GetName]§! is §YAnhativaz§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal:0 "Matliman Canal"
  barzakhan_canal:0 "Barzakhan Canal"
@@ -25,3 +26,6 @@
 
  church_of_saint_gerard:0 "Church of Saint Gérard"
  church_of_saint_gerard_desc:0 "This pagan temple was converted into a saelian church by the Eneratian Emperor in the III century."
+
+ mepis_tadzar:0 "Mepis Tadzar"
+ mepis_tadzar_desc:0 "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
