--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1702,7 +1702,7 @@
  PROV1701:0 "Numegemzid"
  PROV1702:0 "Emuward"
  PROV1703:0 "1703"
- PROV1704:0 "1704"
+ PROV1704:0 "Dasvabena"
  PROV1705:0 "1705"
  PROV1706:0 "1706"
  PROV1707:0 "1707"
