prov names + fixes + namelists

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -293,3 +293,8 @@
  panourgian_archipelago_area:0 "Panourgian Archipelago"
  melesia_area:0 "Melesia"
  agkasia_area:0 "Agkasia"
+ tskvania_area:0 "Tskvania"
+ mamisdabea_area:0 "Mamisdabea"
+ zgivkedal_area:0 "Zgivkedal"
+ akhakveqan_area:0 "Akhakveqan"
+ matservalis_area:0 "Matservalis"
