--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1018,8 +1018,8 @@
  PROV1017:0 "Fawud"
  PROV1018:0 "Erithynai"
  PROV1019:0 "1019"
- PROV1020:0 "1020"
- PROV1021:0 "1021"
+ PROV1020:0 "Pataravel"
+ PROV1021:0 "Sazgharanodaris"
  PROV1022:0 "1022"
  PROV1023:0 "Amnodos"
  PROV1024:0 "Fawud"
@@ -1256,8 +1256,8 @@
  PROV1255:0 "1255"
  PROV1256:0 "1256"
  PROV1257:0 "1257"
- PROV1258:0 "1258"
- PROV1259:0 "1259"
+ PROV1258:0 "Dasarali"
+ PROV1259:0 "Dasarali"
  PROV1260:0 "1260"
  PROV1261:0 "1261"
  PROV1262:0 "1262"
@@ -1273,9 +1273,9 @@
  PROV1272:0 "1272"
  PROV1273:0 "1273"
  PROV1274:0 "1274"
- PROV1275:0 "1275"
- PROV1276:0 "1276"
- PROV1277:0 "1277"
+ PROV1275:0 "Mostqaveli"
+ PROV1276:0 "Kurkutal"
+ PROV1277:0 "Mostqaveli"
  PROV1278:0 "Virinos"
  PROV1279:0 "Kurta"
  PROV1280:0 "Kanoripol"
@@ -1301,7 +1301,7 @@
  PROV1300:0 "1300"
  PROV1301:0 "1301"
  PROV1302:0 "1302"
- PROV1303:0 "1303"
+ PROV1303:0 "Yetzan"
  PROV1304:0 "1304"
  PROV1305:0 "1305"
  PROV1306:0 "1306"
