knowledge sharing fix

--- a/localisation/messages_l_english.yml
+++ b/localisation/messages_l_english.yml
@@ -812,6 +812,19 @@
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "Go to"
+ ASK_KNOWLEDGE_SHARING_TITLE:0 "Asked Knowledge Sharing"
+ ASK_KNOWLEDGE_SHARING_SETUP:1 "When a nation asks us for Knowledge Sharing"
+ ASK_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
+ ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$"
+ ASK_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
+ ASK_KNOWLEDGE_SHARING_3:1 "We"
+ ASK_KNOWLEDGE_SHARING_4:0 "decided"
+ ASK_KNOWLEDGE_SHARING_5:1 "to $RESULT$ the request for Knowledge Sharing from $RECIPIENT_COUNTRY$."
+ ASK_KNOWLEDGE_SHARING_6:0 "$EFFECT$"
+ ASK_KNOWLEDGE_SHARING_LOG:1 "We decided to $RESULT$ the request for Knowledge Sharing from $RECIPIENT_COUNTRY$."
+ ASK_KNOWLEDGE_SHARING_BTN1:0 "OK"
+ ASK_KNOWLEDGE_SHARING_BTN2:0 "OK"
+ ASK_KNOWLEDGE_SHARING_BTN3:0 "Go to"
  FLEETBASING_TITLE:0 "Received Fleet basing Rights"
  FLEETBASING_SETUP:0 "When a nation grants fleet basing rights."
  FLEETBASING_HEADER:0 "Herald from"
