fixes + memlashal loc

--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -14,3 +14,21 @@
  visparayan_ideas:0 "Visparayan Ideas"
  visparayan_ideas_start:0 "Visparayan Traditions"
  visparayan_ideas_bonus:0 "Visparayan Ambitions" 
+
+ memlashal_ideas:0 "Memlashali Ideas"
+ memlashal_ideas_start:0 "Memlashali Traditions"
+ memlashal_ideas_bonus:0 "Memlashali Ambitions" 
+ memlashal_panourgian_trade:0 "Panourgian Trade"
+ memlashal_panourgian_trade_desc:0 "Panourgian Sea is where the most important trade routes between the west and the east meet. Any country controlling these regions is not only profiting by maintaining fees, but can also project their power onto their neighbours."
+ memlashal_varazahani_administration:0 "Varazahani Administration"
+ memlashal_varazahani_administration_desc:0 "The word 'administration' is used in this context loosely as a governing body, meaning rather religious institution keeping a faith census of local population to better identify (and tax) heathens and heretics."
+ memlashal_right_of_conquest:0 "Right of Conquest"
+ memlashal_right_of_conquest_desc:0 "Being a successor state of great Varazahan, we remember the glory times of their conquests, freeing pamkuseans from their eneratian oppression. In the current days, nostalgia is growing strong and people wish to obtain new riches once again."
+ memlashal_deoponian_shipyards:0 "Deoponian Shipyards"
+ memlashal_deoponian_shipyards_desc:0 "Numerous fishing villages in Deoponia have always been self-sufficient - they made fishing vessels themselves. By centralizing the process of building ships we can produce them more efficiently and at a greater scale than ever before."
+ memlashal_absolute_discipline:0 "Absolute Discipline"
+ memlashal_absolute_discipline_desc:0 "To survive in such a hostile environement surrounded by enemies from all sides, one must maintain an absolute sense of control. When everyone is waiting to plunder your lands, there is no place for any mistake. We must maintain discipline and proper hierarchy among our troops to perfectly control the flow of the battle."
+ memlashal_new_tactics:0 "New Tactics"
+ memlashal_new_tactics_desc:0 "After the liberation of Pamkusea, it quickly became apparent, that the ancient visparayan tradition of heavy cavalry and horse riding will not be effective in trechearous highlands of Pamkusea. Our ingenious military instantly adapted and took influence from local army model, famous for its use of foot infantry."
+ memlashal_nusabate_of_the_north:0 "Nusabate of the North"
+ memlashal_nusabate_of_the_north_desc:0 "Memlashal is standing alone against numerous heathens - eneratians, sigilians, anichvarians and tribal nations only wait for us to collapse. They are so focused on our fall they won't see our rise, for we are the true masters of Kakigia."
