trade goods changes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -298,6 +298,8 @@
  zgivkedal_area:0 "Zgivkedal"
  akhakveqan_area:0 "Akhakveqan"
  matservalis_area:0 "Matservalis"
+ dashavastan_area:0 "Dashavastan"
+ mankrigia_area:0 "Mankrigia"
 
  east_chantlian_islands_area:0 "East Chantlian Islands"
 
