--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1262,7 +1262,7 @@
  PROV1261:0 "1261"
  PROV1262:0 "1262"
  PROV1263:0 "1263"
- PROV1264:0 "1264"
+ PROV1264:0 "Kastopsil"
  PROV1265:0 "1265"
  PROV1266:0 "Palofos"
  PROV1267:0 "1267"
@@ -1302,8 +1302,8 @@
  PROV1301:0 "1301"
  PROV1302:0 "1302"
  PROV1303:0 "Yetzan"
- PROV1304:0 "1304"
- PROV1305:0 "1305"
+ PROV1304:0 "Brakhuti"
+ PROV1305:0 "Maghalak"
  PROV1306:0 "1306"
  PROV1307:0 "1307"
  PROV1308:0 "1308"
