--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -8,7 +8,9 @@
  LOADING_TIP_6:0 "What was once homeland of the pamkusean people is now ruled by visparayan states - remnants of the Varazani Empire."
  LOADING_TIP_7:0 "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
  LOADING_TIP_8:0 "Brianola is a peasant republic, but with a dynastical dictatorship in charge"
- LOADING_TIP_9:0 "Geniburgh Company is a group of argenian mercenaries which served in the zakarturi and pamkusean lands - until they grew strong enough to establish their own state."
+ LOADING_TIP_9:0 "Geniburgh Company is a group of mercenaries which served in the zakarturi lands - until they grew strong enough to establish their own state."
  LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapsed caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by capiran and aqerbic states."
  LOADING_TIP_12:0 "Aevadata of Varazanah conquered the pamkusean peninsula in the XIV century, forcing the local population into exile." 
+ LOADING_TIP_13:0 "Apaxtaros is a Pamkuseo-Visparayan hybrid established in XV century"
+ LOADING_TIP_14:0 "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
