fixes + wedla loc

--- a/localisation/00_lanfang_l_english.yml
+++ b/localisation/00_lanfang_l_english.yml
@@ -82,7 +82,7 @@
  estate_church_karma_temples_ct:0 "§Y+5 Karma§! is added upon construction of §YTemple§! buildings.\n§Y-5 Karma§! is added upon destruction of §YTemple§! buildings."
  estate_church_influence_temples:0 "Church Sanctuaries"
  estate_church_influence_temples_desc:1 "Respect the privilege of the Church of granting sanctuary to suspected criminals and debtors, this will please local Church authorities who can charge them lodging (and the Papacy), even if it comes at the cost of our secular authority."
- estate_church_influence_temples_tt:0 "§Y+3 Papal Influence§! is added upon construction of §YChurch§! buildings.\n§Y-3 Papal Influence§! is added upon destruction of §YChurch§! buildings."
+ estate_church_influence_temples_tt:0 "§Y+3 Episcopal Influence§! is added upon construction of §YChurch§! buildings.\n§Y-3 Episcopal Influence§! is added upon destruction of §YChurch§! buildings."
  estate_burghers_tropical_mod:0 "Tropical City Planning"
  desc_estate_burghers_tropical_mod:0 "Having millenia of experience, we are quite able to construct vast cities in our homeland despite the difficulties posed by the climate."
  estate_burghers_tropical_nation:0 "Tropical City Planning"
