--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -2385,7 +2385,7 @@
  claiming_the_shogunate_tooltip:0 "[new_shogunate.GetName] will be the leader of the new Shogunate.\nAll Daimyo's loyal to the Shogunate will be transferred to [new_shogunate.GetName]."
  INDEPENDENCE_WAR_NAME:0 "$ORDER$$FIRST$ War for Independence"
  DEFENDER_DESC:2 "The Defender of the Faith gets Casus Belli to enforce religious unity. This will cost §Y$VALUE$§W¤. After §Y$MONTHS$§W months, countries with more prestige than the current Defender can claim the title. \nYou'll also lose if you decline a call to war from a country of your faith being attacked by infidels, or if you lose a war to infidels."
- CARDINAL_NEW:0 "§YActive cardinal§!\nWe control this active cardinal from $HOME|Y$. Each active cardinal gives us $BENEFIT$ Papal Influence per year."
+ CARDINAL_NEW:0 "§YActive cardinal§!\nWe control this active cardinal from $HOME|Y$. Each active cardinal gives us $BENEFIT$ PaEpiscopal Influenceer year."
  NO_ACTIVE_CARDINALS:0 "Spend your papal influence to vote on future cardinals to increase your chance to control a cardinal in the Papacy in the future."
  OPEN_PAPACY:0 "§YPapacy view§!\nClick here to open the papacy view."
  NAME:0 "Name"
@@ -2442,25 +2442,25 @@
  EV_SIEGE_COMBAT:0 "siege combat"
  EV_MANEUVER:0 "maneuver"
  SEND_GIFT:0 "Send Gift"
- AUTOMATING_CARDINAL:0 "Automatic Spending for §Y$CARDINAL$§! is currently ON. You will automatically spend Papal Influence to try and maintain control of this cardinal."
- NOT_AUTOMATING_CARDINAL:0 "Automatic Spending for §Y$CARDINAL$§! is currently OFF. You will need to manually spend Papal Influence to maintain control of this cardinal."
+ AUTOMATING_CARDINAL:0 "Automatic Spending for §Y$CARDINAL$§! is currently ON. You will automatically spend PaEpiscopal Influenceo try and maintain control of this cardinal."
+ NOT_AUTOMATING_CARDINAL:0 "Automatic Spending for §Y$CARDINAL$§! is currently OFF. You will need to manually spend PaEpiscopal Influenceo maintain control of this cardinal."
  AUTOMATE_CARDINAL_ON:0 "Click to turn Automatic Spending on."
  AUTOMATE_CARDINAL_OFF:0 "Click to turn Automatic Spending off."
  NO_ACTVIVE_CARDINALS:0 "No active cardinals."
- VOTE_ON_CARDINAL:0 "Spend Papal Influence to vote for this future cardinal."
- VOTE_ONE_ON_CARDINAL:0 "§YLeft click§! to spend $PI|R$ point of Papal Influence to add $PI|G$ vote for this future cardinal."
- CANT_VOTE_ON_CARDINAL:0 "You need at least $PI|Y$ point(s) of Papal Influence to vote for this cardinal."
+ VOTE_ON_CARDINAL:0 "Spend Episcopal Influence to vote for this future cardinal."
+ VOTE_ONE_ON_CARDINAL:0 "§YLeft click§! to spend $PI|R$ point of PaEpiscopal Influenceo add $PI|G$ vote for this future cardinal."
+ CANT_VOTE_ON_CARDINAL:0 "You need at least $PI|Y$ point(s) of Episcopal Influence to vote for this cardinal."
  ACTIVE_CARDINALS:0 "The country that has the most loyal active cardinals will be the Episcopal controller."
  FUTURE_CARDINALS:0 "When an active cardinal dies, a random one of future cardinals will be chosen to be an active cardinal. The cardinal will be loyal to the one who has spent the most points on him."
  CARDINAL_CONTROLLER:0 "$COUNTRY$ ($VAL$)"
  PAPAL_INFLUENCE_DESC:0 "Episcopal Influence represents our influence with the Holy Father. This can be spent on future cardinals to make them loyal to us when they one day become active cardinals."
  NEW_PAPAL_INFLUENCE_DESC:0 "Episcopal Influence represents our influence with the Holy Father. The largest Catholic cities in countries with large papal influence will be chosen to represent the Catholic faith."
  PAPAL_NOT_ALLOW:0 "§RYou do not meet all the requirements for taking this action.§!"
- PAPAL_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$ Papal Influence to take this action.§!"
+ PAPAL_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$ PEpiscopal Influenceto take this action.§!"
  PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$¤ Curia Treasury Available to take this action.§!"
- PAPAL_COST:1 "Costs $COST|Y0$ Papal Influence.\n"
+ PAPAL_COST:1 "Costs $COST|Y0$ Episcopal Influence.\n"
  PAPAL_CURIA_TREASURY_COST:0 "Costs $COST|Y0$¤ from the Curia Treasury.\n"
- PAPAL_INVEST:0 "Spend §Y$MOD_COST$§W Papal Influence to gain §Y$COST$§W Invested influence towards becoming the next Episcopal Controller."
+ PAPAL_INVEST:0 "Spend §Y$MOD_COST$§W PaEpiscopal Influenceo gain §Y$COST$§W Invested influence towards becoming the next Episcopal Controller."
  SORT_BY_SIZE:0 "Sort by the size of the army"
  SORT_BY_MORALE:0 "Sort by the morale of the army"
  SORT_BY_LOCATION:0 "Sort by the army's location"
