--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -19,3 +19,22 @@
 
  centralize_the_state_title:0 "Centralise the State"
  centralize_the_state_desc:0 "Self-will of our vassals has been a menace to our king for far too long. It's time to show our nobles who is really in charge in this [Root.GovernmentName]."
+
+ 
+ wedla_ideas:0 "Wedlan Ideas"
+ wedla_ideas_start:0 "Wedlan Traditions"
+ wedla_ideas_bonus:0 "Wedlan Ambitions"
+ wedla_merchant_monarchy:0 "Merchant Monarchy"
+ wedla_merchant_monarchy_desc:0 "Our location between Ostsee and Onzee has created a great opportunity for mercantile tradition to develop in wedlan lands. Transfer of goods across Odwal is popular amongst merchants who want to avoid paying tolls in Mezonia and Uzkolia. This proved useful in creating our own nationhood, independent from and older than Bogiland."
+ wedla_wedlanska_gildija_handlowa:0 "Wedlanska Gildija Handlowa"
+ wedla_wedlanska_gildija_handlowa_desc:0 "This organization, commonly abreviated as WGH, bands together all of the merchants in Wedla under a unified law to better manage flow of goods across the Ostsee. It was so successful that thanks to its efforts we managed to seize the island of Lara due to the debt of local ruler to WGH."
+ wedla_heathen_compassion:0 "Heathen Compassion"
+ wedla_heathen_compassion_desc:0 "Trading in Marstonia and our own tradition has made our merchants more keen to see them as equals, rather than someone worse. After all, it's not that religion matters, but whether you can bring us profit."
+ wedla_maritime_empire:0 "Maritime Empire"
+ wedla_maritime_empire_desc:0 "Our oversea territories - most notably island of Lara and ports in Zirgukalnis - require constant management and contact with the homeland. Thankfuly, the nation is full of potential sailors willing to serve the crown."
+ wedla_princes_codex:0 "Prince's Codex"
+ wedla_princes_codex_desc:0 "This collection of law was named after the prince Jerzy, who wanted to group together most important common laws in the nation which in turn would centralize and solidify the rule in the countryside. Later, this document was used as an inspiration by Bogilish kings to crack down on local nobility."
+ wedla_wedlan_glass:0 "Wedlan Glass"
+ wedla_wedlan_glass_desc:0 "Togawian glassmakers are famous for their artistry relating to common life in our lands. Being made from the refined sand gives them a unique look which makes them very popular amongst the western nobility, which sees it as piece of 'oriental' culture."
+ wedla_lessons_of_war:0 "Lessons of War"
+ wedla_lessons_of_war_desc:0 "Frequent and brutal clashes with Ziemelians made our military very prone to adjust their strategy to achieve the least amount of losses to grant up the upper hand in the next war. Each battle is thoroughly studied and the knowledge is passed down to the new military leaders. This was greatly shown during our involvement in the League of Lippstadt and by our soldiers for hire during Mercenary Wars."
