--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -389,10 +389,10 @@
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "Call Ecumenical Council"
  CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "Do you want to spend $COST|Y$¤ to call the Ecumenical Council? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Papal Controller."
  # Buy Indulgence
- CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Papal Influence for $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly PaEpiscopal Influenceor $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
  CURIA_BUY_INDULGENCE_EXCOMMUNICATED:0 "You are Excommunicated, so the price for your Indulgence is $MULTIPLIER|Y$ times bigger. The Pope, on the other hand, will reward your proof of faith by lifting it and will not try Excommunicate you again for $YEARS|Y$ years."
  CURIA_BUY_INDULGENCE_TITLE:0 "Buy Indulgence"
- CURIA_BUY_INDULGENCE_DESC:0 "Do you want to spend $COST|Y$¤ to buy Indulgence for your sins? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Papal Influence for $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE_DESC:0 "Do you want to spend $COST|Y$¤ to buy Indulgence for your sins? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly PaEpiscopal Influenceor $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
  CURIA_BUY_INDULGENCE_ALREADY_BOUGHT:0 "§RYou have already bought Indulgence for your sins, no amount of money can change the Pope's mind at the moment.§!"
  CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§RYou need $COST|Y$¤ to buy Indulgence, but you only have $AVAILABLE|Y$¤§!"
  EXCOM_TARGET_BOUGHT_INDULGENCE:0 "§RThe target bought Indulgence for his sins, you cannot Excommunicate him now.§!"
@@ -1070,7 +1070,7 @@
  kingdom_of_god_reform_desc:0 "The Papacy has established the Kingdom of God on Earth. The authority of the Church, led by the Holy Father, shall be absolute in both the spiritual and temporal realms."
  LOCK_CURIA_EFFECT:0 "$WHO$ will be permanently the Curia Controller."
  PAPAL_INFLUENCE_CURIA_LOCKED:0 "§RThe Curia is locked to $WHO$.§!"
- MODIFIER_PAPAL_INFLUENCE_FROM_CARDINALS:0 "Papal Influence from Cardinals"
+ MODIFIER_PAPAL_INFLUENCE_FROM_CARDINALS:0 "Episcopal Influence from Cardinals"
  IMPERIAL_INCIDENT_OPTION_SUPPORT:0 "$VOTES$ / $PRINCES$"
  IMPERIAL_INCIDENT_SELECTED_OPTION:0 "\nThe §YEmperor§! favors this option."
  NONE_TEXT:0 "None"
