--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -6512,10 +6512,10 @@
  local_saint:0 "Beatify Local Saint"
  PAPAL_INFLUENCE_NO_CARDINAL:0 "§R- It is not possible to invest papal influence if you have no active cardinals.§!"
  CARDINALLIST:0 "$PROVINCE$, $COUNTRY$ with a chance of $SCORE$%.\n"
- YEARLY_PAPAL_INFLUENCE:0 "Yearly Papal Influence"
+ YEARLY_PAPAL_INFLUENCE:0 "Yearly Episcopal Influence"
  YEARLY_CHANGE:0 "Yearly Change"
  CURRENT_PAPAL_INFLUENCE:0 "Episcopal Influence: §Y$VAL$§!"
- MONTHLY_PAPAL_INFLUENCE:0 "Each year you gain $VAL$ Papal Influence."
+ MONTHLY_PAPAL_INFLUENCE:0 "Each year you gain $VAL$ Episcopal Influence."
  CATHOLIC_PAPAL_INFLUENCE:0 "Base Value:"
  CARDINALS_PAPAL_INFLUENCE:0 "From Controlled Cardinals:"
  PAPAL_RELATIONS:0 "Papal State Relations"
@@ -6523,15 +6523,15 @@
  OLD_CARDINAL_EXPL:0 "was under the diabolic influence of $OLD$."
  OLD_CARDINAL_EXPL_OURS:0 "was known to adhere to our divinely inspired advice."
  NEW_CARDINAL_EXPL:0 "$NEW$ is pulling his strings."
- NEW_CARDINAL_EXPL_OURS:0 "He is loyal to us, though the arrangement cost us some Papal Influence."
+ NEW_CARDINAL_EXPL_OURS:0 "He is loyal to us, though the arrangement cost us some Episcopal Influence."
  HRE_INFLUENCE_DESC:1 "Imperial Authority represents the amount of control the Emperor exerts over the Princes of the Empire. Authority is needed to enact reform decisions within the Saelian Empire. A high Authority may inspire more nations to join the Empire."
  HRE_INFLUENCE_GAIN:1 "Gained by:\n - Having a large amount of member states\n - The member states being at peace\n - Countries joining the Empire\n - Successive Emperors from the same country\n - Emperor voting with the majority of princes in SE incidents"
  HRE_INFLUENCE_LOSS:1 "Lost by:\n - Dishonoring the Calls of members\n - Provinces leaving the Empire\n - Imperial territory under the control of foreign states\n - Imperial territory under the control of heathens and heretics\n - Having less than 4 electors\n - Emperor voting with the minority of princes in SE incidents"
  PAPAL_INF_LESS_THAN:0 "Episcopal Influence less than"
  PAPAL_INF_AT_LEAST:0 "Episcopal Influence at least"
- INVESTED_PAPAL_INF_LESS_THAN:0 "Invested Papal Influence less than"
- INVESTED_PAPAL_INF_AT_LEAST:0 "Invested Papal Influence at least"
- ADD_PAPAL_INFLUENCE:0 "$DIRECTION$ $VALUE$ Papal Influence"
+ INVESTED_PAPAL_INF_LESS_THAN:0 "Invested Episcopal Influence less than"
+ INVESTED_PAPAL_INF_AT_LEAST:0 "Invested Episcopal Influence at least"
+ ADD_PAPAL_INFLUENCE:0 "$DIRECTION$ $VALUE$ Episcopal Influence"
  PAPACY_IS_ENABLED:0 "The the Episcopate is active"
  PAPACY_IS_DISABLED:0 "The the Episcopate is NOT active"
  ENABLE_PAPACY:0 "Enable the the Episcopate"
